add UPDATE query, icon and edit css

--- a/renderer/css/style.css
+++ b/renderer/css/style.css
@@ -11,13 +11,13 @@ body{
 }
 
 table{
-    width:  1000px;
+    width:  100%;
     margin: 30px auto;
 }
 
 table th{
     padding: 10px 0;
-    background-color: #f4f4f4;
+    background-color: #a099ff;
     /* background-color: #fff; */
     border:  thin solid #d4d4d4;
 }
@@ -33,10 +33,34 @@ table td{
 table img{
     width:  70%;
 }
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #F8F9F9;
+    color: white;
+}
+
+
 /* This Style button */
 .btn {
     border: none; /* Remove borders */
-    color: white; /* Add a text color */
+    color: #000000; /* Add a text color */
     padding: 10px 18px; /* Add some padding */
     cursor: pointer; /* Add a pointer cursor on mouse-over */
     border-radius: 5px; /* Add button curve */
@@ -44,5 +68,138 @@ table img{
     font-size: 16px; /* Add Font*/
 }
 
-.success {background-color: #04AA6D;} /* Green */
-.success:hover {background-color: #46a049;}
+.success {background-color: #a099ff;} /*Purple*/
+.success:hover {background-color: #c6c2ff;}
+
+.default {
+    background-color: #e7e7e7;
+
+    color: black;
+    position: relative;
+    left: initial;} /* Gray */
+.default:hover {
+    background: #ddd;
+    position: relative;
+    left: initial;}
+
+/* This is our style for the invalid fields */
+input.invalid {
+    border-color: #900;
+    background-color: #fdd;
+}
+
+input:focus:invalid {
+    outline: none;
+}
+
+/* This is the style of our error messages */
+.error {
+    width: 100%;
+    padding: 0;
+
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: 0.3em;
+}
+
+/* For Form*/
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-end; /* Align items to the end of the container */
+    padding-left: initial;
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    margin-left: 20px; /* Left margin */
+}
+
+/* Style the submit button with a specific background color etc */
+.summit-btn {
+    background-color: #4033FF;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 4px 2px; /* Add margin for spacing */
+}
+
+/* When moving the mouse over the submit button, add a darker blue color */
+.summit-btn:hover {
+    background-color: #0002FE;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+/* Style the cancel button with a specific background color etc */
+.cancel-btn {
+    background-color: #C70039;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 4px 2px; /* Add margin for spacing */
+}
+
+/* When moving the mouse over the cancel button, add a darker red color */
+.cancel-btn:hover {
+    background-color: #900C3F;
+}
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
